tests/transpiler/x/zig/exists_builtin.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/exists_builtin.zig:13:9: error: local variable is never mutated
/workspace/mochi/tests/transpiler/x/zig/exists_builtin.zig:13:9: note: consider using 'const'
