tests/transpiler/x/zig/exists_builtin.zig
// Generated by Mochi Zig transpiler on 2025-07-20 15:58 +0000
const std = @import("std");

pub fn main() void {
    const data = [_]i64{1, 2};
    const flag = std.mem.len(blk: {
    var arr = std.ArrayList(i64).init(std.heap.page_allocator);
    for (data) |x| {
        if (x == 1) {
            arr.append(x) catch unreachable;
        }
    }
    const tmp = arr.toOwnedSlice() catch unreachable;
    break :blk tmp;
}) != 0;
    try std.io.getStdOut().writer().print("{any}\n", .{flag});
}
